Bugfix: [js, scss] - fixes misalignment of text in card's section when expanded by adding'-is-super-squeezed' class for small widths

--- a/app/styles/affordances/_states.cards.scss
+++ b/app/styles/affordances/_states.cards.scss
@@ -31,7 +31,8 @@
         }
     }
 
-    &.-is-squeezed {
+    &.-is-squeezed,
+    &.-is-super-squeezed {
 
         .-is-expanded {
             width: 85% !important;
@@ -40,6 +41,10 @@
                 // float: left;
                 margin-top: .25rem;
             }
+
+
+
+
         }
 
 
@@ -100,6 +105,25 @@
             }
         }
     }
+
+    &.-is-super-squeezed {
+
+        .-is-expanded {
+            padding: 0 0 0 0 !important;
+
+            label.switch-paddle {
+                float: left;
+                margin-top: .25rem;
+            }
+
+            select {
+                width: 100%;
+            }
+        }
+
+
+    }
+
 }
 
 .card--element-node.-is-selected,
